--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -13,8 +13,7 @@
     &_body{
         max-width:250px;
         height: 350px;
-        align-items: center;
-        text-align: center;
+        margin: auto;
         
         .image{
           
